# tired_server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
config/: config.toml
src/: config.rs  main.rs
