[package]
name = "tired_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.3"
sqlite = "0.31.1"

tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
parse_duration = "2.1.1"
toml = "0.7.8"
serde = { version = "1.0.188", features = ["derive"] }


[profile.release]
opt-level = 3
lto = true
debug = false

